fix: wrong colors in custom chart creation menu

--- a/styles/bstats/catppuccin.user.css
+++ b/styles/bstats/catppuccin.user.css
@@ -332,7 +332,7 @@
       background-color: fade(@surface2, 5%);
     }
 
-    .input-field .active {
+    .input-field label {
       color: @accent-color !important;
     }
     /* search unfocused */
@@ -368,6 +368,36 @@
     textarea.materialize-textarea:focus:not([readonly]) {
       border-bottom: 1px solid @accent-color;
       box-shadow: 0 1px 0 0 @accent-color;
+    }
+    /* valid input */
+    input:not([type]).valid,
+    input:not([type]):focus.valid,
+    input[type="text"].valid,
+    input[type="text"]:focus.valid,
+    input[type="password"].valid,
+    input[type="password"]:focus.valid,
+    input[type="email"].valid,
+    input[type="email"]:focus.valid,
+    input[type="url"].valid,
+    input[type="url"]:focus.valid,
+    input[type="time"].valid,
+    input[type="time"]:focus.valid,
+    input[type="date"].valid,
+    input[type="date"]:focus.valid,
+    input[type="datetime"].valid,
+    input[type="datetime"]:focus.valid,
+    input[type="datetime-local"].valid,
+    input[type="datetime-local"]:focus.valid,
+    input[type="tel"].valid,
+    input[type="tel"]:focus.valid,
+    input[type="number"].valid,
+    input[type="number"]:focus.valid,
+    input[type="search"].valid,
+    input[type="search"]:focus.valid,
+    textarea.materialize-textarea.valid,
+    textarea.materialize-textarea:focus.valid {
+      border-bottom: 1px solid @green;
+      box-shadow: 0 1px 0 0 @green;
     }
 
     .teal-text,
@@ -444,7 +474,7 @@
     }
 
     .divider {
-      background-color: @overlay2;
+      background-color: @surface1;
     }
     .caret {
       color: @overlay1 !important;
@@ -458,10 +488,49 @@
       }
     }
     .switch label input[type="checkbox"]:checked + .lever {
-      background-color: desaturate(darken(@accent-color, 30%), 50%);
+      background-color: desaturate(darken(@accent-color, 25%), 50%);
+      & when (@flavor=latte) {
+        background-color: desaturate(lighten(@accent-color, 12%), 30%);
+      }
       &::after {
         background-color: @accent-color;
       }
+    }
+
+    /* custom chart filter data */
+    .chip {
+      color: @text;
+      background-color: @surface1;
+    }
+    .chips .chip.selected {
+      background-color: @accent-color;
+      color: @base;
+    }
+    .chips.focus {
+      border-bottom: 1px solid @accent-color;
+      box-shadow: 0 1px 0 0 @accent-color;
+    }
+    .chips .input {
+      color: @text;
+    }
+    input:not([type]),
+    input[type="text"],
+    input[type="password"],
+    input[type="email"],
+    input[type="url"],
+    input[type="time"],
+    input[type="date"],
+    input[type="datetime"],
+    input[type="datetime-local"],
+    input[type="tel"],
+    input[type="number"],
+    input[type="search"],
+    textarea.materialize-textarea {
+      border-bottom: 1px solid @overlay2;
+      box-shadow: 1 1px 0 0 @overlay2 !important;
+    }
+    input[placeholder="Add an other value"] {
+      border-bottom: 0px solid @overlay2 !important;
     }
 
     /* HIGHCHARTS "let's hope this does'nt break"-section */
